# Aether-Thread

./: .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CONTRIBUTING.md  FEATURE_SUMMARY.md  INDEX.md  INSTALLATION.md  LICENSE  PHASE_3_RELEASE_NOTES.md  PROJECT_SETUP.md  QUICKREF.md  README.md  ROADMAP.md  aether  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: aether-profile.yml  aether-thread-check.yml
aether_thread/: __init__.py  analyzer.py  cli.py  decorators.py  profiler.py  transformer.py
aether_thread/audit/: __init__.py  analyzer.py  cli.py  scanner.py
aether_thread/bench/: __init__.py  benchmarker.py  cli.py  runner.py
aether_thread/proxy/: __init__.py  collections.py  wrapper.py
docs/: AUDIT.md  CI_CD_INTEGRATION.md  CI_CD_QUICK_START.md  DEPLOYMENT_CHECKLIST.md  INDEX.md  PHASE_3_4_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_3_DELIVERY.md  PHASE_3_GUIDE.md  QUICK_REFERENCE.md  RESEARCH_FOUNDATION.md  STRUCTURED_CONCURRENCY.md
examples/: audit_demo.py  bank_account.py  basic_usage.py  demo.py  legacy_code.py  transformable.py
scripts/: pre-deploy.bat  pre-deploy.sh
src/aether/: __init__.py  check.py  cli.py  concurrent.py  decorators.py  jupyter_magic.py  monitor.py  pool.py  profile.py  regression.py  safety_veto.py
src/aether/audit/: __init__.py  analyzer.py  free_thread_detector.py  lock_injector.py  race_detector.py  reporter.py  scanner.py
src/aether/benchmark/: __init__.py  benchmarker.py  runner.py
src/aether/collections/: __init__.py
tests/: __init__.py  test_analyzer.py  test_audit.py  test_decorators.py  test_monitor.py  test_profiler.py  test_proxy.py  test_transformer.py
